// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiTabs props expand passes down to EuiTab children 1`] = `
<div
  class="euiTabs emotion-euiTabs-m-bottomBorder"
  role="tablist"
>
  <button
    aria-selected="false"
    class="euiTab emotion-euiTab-expanded"
    role="tab"
    tabindex="-1"
    type="button"
  >
    <span
      class="euiTab__content eui-textTruncate emotion-euiTab__content-m"
    >
      Tab
    </span>
  </button>
</div>
`;

exports[`EuiTabs props size l renders and passes down to EuiTab children 1`] = `
<div
  class="euiTabs emotion-euiTabs-l-bottomBorder"
  role="tablist"
>
  <button
    aria-selected="false"
    class="euiTab emotion-euiTab"
    role="tab"
    tabindex="-1"
    type="button"
  >
    <span
      class="euiTab__content eui-textTruncate emotion-euiTab__content-l"
    >
      Tab
    </span>
  </button>
</div>
`;

exports[`EuiTabs props size m renders and passes down to EuiTab children 1`] = `
<div
  class="euiTabs emotion-euiTabs-m-bottomBorder"
  role="tablist"
>
  <button
    aria-selected="false"
    class="euiTab emotion-euiTab"
    role="tab"
    tabindex="-1"
    type="button"
  >
    <span
      class="euiTab__content eui-textTruncate emotion-euiTab__content-m"
    >
      Tab
    </span>
  </button>
</div>
`;

exports[`EuiTabs props size s renders and passes down to EuiTab children 1`] = `
<div
  class="euiTabs emotion-euiTabs-s-bottomBorder"
  role="tablist"
>
  <button
    aria-selected="false"
    class="euiTab emotion-euiTab"
    role="tab"
    tabindex="-1"
    type="button"
  >
    <span
      class="euiTab__content eui-textTruncate emotion-euiTab__content-s"
    >
      Tab
    </span>
  </button>
</div>
`;

exports[`EuiTabs renders 1`] = `
<div
  aria-label="aria-label"
  class="euiTabs testClass1 testClass2 emotion-euiTabs-m-bottomBorder-euiTestCss"
  data-test-subj="test subject string"
  role="tablist"
>
  children
</div>
`;
